# handshake

./: BENCHMARKS.md  Cargo.toml  LICENSE  Makefile.toml  README.md  codecov.yml
.github/actions-rs/: grcov.yml
.github/workflows/: clippy.yaml  clippy.yml  coverage.yaml  coverage.yml  grcov.yml  rust.yaml  rustfmt.yaml
code/: Cargo.toml
code/examples/: async-box-stream.rs  asynchandshake-boxstream.rs  broadcast-send.rs  broadcast.rs  ed25519.rs  ed25519_2.rs  handshake-boxstream-bench.rs  handshake-boxstream.rs  handshake-nice.rs  handshake-ssbserver.rs  handshake.rs  ssb-cli.rs  whoami.rs
code/examples/handshake-ssbserver/: client.js  package.json
code/scripts/: benchmark-boxstream-sync.sh
code/src/: asyncapi.rs  asyncboxstream.rs  asynchandshake.rs  asyncrpc.rs  boxstream.rs  boxstream_sync.rs  buffer.rs  config.rs  handshake.rs  handshake_async.rs  handshake_sync.rs  lib.rs  rpc.rs  sodiumutil.rs  utils.rs
code/src/pasync/: mod.rs
code/src/pasync/crypto/: sodium.rs
code/src/pasync/handbox/: boxstream.rs  handshake.rs  mod.rs
code/src/pasync/patchwork/: api.rs  config.rs  dto.rs  encoding.rs  feed.rs  integrity.rs  message.rs  messagetypes.rs  mod.rs  privatebox.rs  pubs.rs
code/src/pasync/rpc/: rpc.rs
code/src/pasync/util/: buffer.rs  error.rs
code/test_utils/: Cargo.toml
code/test_utils/src/: lib.rs  net_async.rs  net_sync.rs
examples/: broadcast.rs  handshake-boxstream-bench-async.rs  handshake-boxstream-bench-sync.rs  handshake-boxstream-bench.rs  handshake-boxstream.rs  handshake-nice.rs  handshake.rs
scripts/: benchmark-boxstream-all.sh  benchmark-boxstream-async.sh  benchmark-boxstream-sync.sh  benchmark-boxstream.sh
src/: boxstream.rs  error.rs  handshake.rs  lib.rs  utils.rs
src/async_std/: boxstream.rs  circularbuffer.rs  error.rs  handshake.rs  mod.rs  tokio_compat.rs
src/sync/: boxstream.rs  error.rs  handshake.rs  mod.rs
test_utils/: Cargo.toml
test_utils/src/: async.rs  net_async.rs  net_sync.rs
