[package]
name = "kuska-handshake"
version = "0.1.1"
authors = ["Dhole <dhole@riseup.net>", "Adria Massanet <adria@codecontext.io>"]
edition = "2018"

[lib]
name = "kuska_handshake"

[dependencies]
sodiumoxide = { git = "https://github.com/Dhole/sodiumoxidez", branch = "extra" }
async-std = { version = "1.5.0", features=["unstable","attributes"] }
futures = "0.3.5"
log = "0.4.8"
tokio = { version = "0.2.20", features=["full"] }
hex = "0.4.2"
thiserror = "1.0"

[dev-dependencies]
test_utils = { path = "test_utils" }
crossbeam = "0.7.3"
env_logger = "0.7.1"
base64 = "0.12.1"

[features]
default = []
sync = []
async_std = []
tokio_compat = [ "async_std" ]

[[example]]
name = "handshake-boxstream-bench-sync"
required-features = ["sync"]

[[example]]
name = "handshake-boxstream"
required-features = ["sync"]

[[example]]
name = "handshake"
required-features = ["sync"]

[[example]]
name = "handshake-boxstream-bench-async"
required-features = ["async_std"]

