[package]
name = "kuska-handshake"
version = "0.1.1"
authors = ["Dhole <dhole@riseup.net>", "Adria Massanet <adria@codecontext.io>"]
edition = "2018"
license-file = "LICENSE"
description = "Secure Scuttlebutt handshake + boxstream library"
homepage = "https://github.com/Kuska-ssb"
repository = "https://github.com/Kuska-ssb/handshake"
readme = "README.md"
keywords = ["kuska", "handshake", "boxstream", "ssb", "scuttlebutt"]
categories = ["asynchronous", "cryptography", "authentication", "network-programming"]

[lib]
name = "kuska_handshake"

[dependencies]
sodiumoxide = { version = "0.2.5-0", package = "kuska-sodiumoxide" }
async-std = { version = "1.5.0", features=["unstable","attributes"] }
futures = "0.3.5"
log = "0.4.8"
tokio = { version = "0.2.20", default-features = false, features=["net", "io-util"], optional = true }
hex = "0.4.2"
thiserror = "1.0"

[dev-dependencies]
test_utils = { path = "test_utils" }
crossbeam = "0.7.3"
env_logger = "0.7.1"
base64 = "0.12.1"

[features]
default = []
sync = []
async_std = []
tokio_compat = [ "async_std", "tokio" ]

[[example]]
name = "handshake-boxstream-bench-sync"
required-features = ["sync"]

[[example]]
name = "handshake-boxstream"
required-features = ["sync"]

[[example]]
name = "handshake"
required-features = ["sync"]

[[example]]
name = "handshake-boxstream-bench-async"
required-features = ["async_std"]

