[package]
name = "code"
version = "0.1.0"
authors = ["Dhole <dhole@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"

ed25519-dalek = "1.0.0-pre.1"
sodiumoxide = { git = "https://github.com/Dhole/sodiumoxidez", branch = "extra" }

base64 = "0.10.1"
hex = "0.3.2"
get_if_addrs = "0.5.3"
arrayref = "0.3.5"
