[package]
name = "test_utils"
version = "0.1.0"
authors = ["Dhole <dhole@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.2"
async-std = { version = "1.1.0", features=["unstable","attributes"] }
futures = "0.3.1"
pin-utils = "0.1.0-alpha.4"
